--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 
-    <canvas id="canvas" width="800" height="600"></canvas>
+    <canvas id="canvas"></canvas>
 
-    <script defer src="assets/js/app.js"></script>
+    <script defer src="assets/js/app.js" type="module"></script>
 
 </body>
 
