--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Matrix Rain Effect" />
+    <meta property="og:image" itemprop="image"
+        content="https://sumitkcs.github.io/matrix-effect/assets/img/preview-green.png" />
+    <meta property="og:image:alt"
+        content="The words 'Not all who wander are lost' set against a starry night background. Click to visit website." />
+    <meta property="og:description" content="Project by Er. Sumit Kumar" />
+    <meta property="og:url" content="https://sumitKcs.github.io/matrix-effect/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="300">
+    <meta property="og:image:height" content="300">
+    <meta name="twitter:card" content="summary" />
+    <meta name="description" content="A constellation efffect animation app. Click to visit website." />
+    <meta name="theme-color" content="#000000" />
+    <meta name="keywords"
+        content="HTML, CSS, JavaScript, Canvas API, mouse trail, animation, particles, constellation" />
+    <meta name="author" content="Er. Sumit Kumar" />
+    <title>Matrix Rain Effect</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="canonical" href="https://sumitKcs.github.io/matrix-effect" />
+
 </head>
 
 <body>
